# nextpnr

generic/: family.cmake
generic/viaduct/pcbfpga/: constids.inc  mesh.cc  mesh.h  mesh_utils.h  mini_example.v  pcbfpga.cc  pcbfpga_map.v  pcbfpga_merge.v  pcbfpga_prims.v  pnrmini_example.rpt  premap.v  synth_pcbfpga.tcl  viaduct_example.sh  viaduct_example_opc.sh  viaduct_example_servisia.sh
generic/viaduct/pcbfpga/test/: .gitignore  cells_map.v  pnrblinky.v  pnrservisia.v  prims.v  simple.sh  simple_bram.sh  simple_servisia.sh  synth_pcbfpga.tcl
generic/viaduct/pcbfpga/test/examples/: blinky.v  bram.v
generic/viaduct/pcbfpga/test/scripts/: cells_map.v  memory_map.txt  prims.v  synth_pcbfpga.tcl
generic/viaduct/xcxk/: constids.inc  xc3000.cc  xc3000.h  xcxk.cc
generic/viaduct/xcxk/test/: .gitignore  viaduct_example.sh
himbaechel/: family.cmake
himbaechel/uarch/pcbfpga/: CMakeLists.txt  pcbfpga.cc  pcbfpga_arch_gen.py
